--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,3 +24,5 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+- task: PublishPipelineArtifact@1
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
